--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@ $(document).ready(function(){
 					var playerrr = data.playerY-1;
 
 
-					player[playerx1][playery1] = 1;
+					objectMap[playerx1][playery1] = 1;
 
 					   if(playerx1 !== playerxx && playery1 !== playeryy){
  					  delete player[playerxx][playeryy];
