--- a/index.html
+++ b/index.html
@@ -27,8 +27,11 @@
 	
 	
 	
-	
-	
+	var socket = io();
+      var el = document.getElementById('server-time');
+      socket.on('time', function(timeString) {
+        el.innerHTML = 'Server time: ' + timeString;
+      });
 
 
 	
