--- a/index.html
+++ b/index.html
@@ -1,19 +1,44 @@
-<html>
-  <body>
-    <p id='server-time'></p>
-    <script src="/socket.io/socket.io.js"></script>
-    <script>
-      var socket = io();
+
+
+
+
+
+
+
+
+
+<html>  
+<head>
+<style>
+#main {
+        border:#333;
+        border-width:2px;
+        border-style:solid;
+}
+
+
+</style>
+
+ <script src="/socket.io/socket.io.js"></script>
+<script>
+	
+	
+	
+	      var socket = io();
       var el = document.getElementById('server-time');
-      socket.on('time', function(timeString) {
+
+	
+	
+	
+	   socket.on('time', function(timeString) {
         el.innerHTML = 'Server time: ' + timeString;
       });
-    </script>
-  </body>
+	
+	
+
+</script>
+</head>
+    <p id='server-time'></p>
+   </body>
+      
 </html>
-
-
-
-
-
-
