--- a/index.html
+++ b/index.html
@@ -8,16 +8,8 @@
 
 
 <html>  
-<head>
-<style>
-#main {
-        border:#333;
-        border-width:2px;
-        border-style:solid;
-}
-
-
-</style>
+  <body>
+  <p id='server-time'></p>
 
  <script src="/socket.io/socket.io.js"></script>
 <script>
@@ -37,8 +29,8 @@
 	
 
 </script>
-</head>
-    <p id='server-time'></p>
-   </body>
-      
+
+  
+  
+  </body>
 </html>
