--- a/index.html
+++ b/index.html
@@ -14,6 +14,21 @@
 
 
 <html> 
+	
+	<head>
+<style>
+#main {
+        border:#333;
+        border-width:2px;
+        border-style:solid;
+}
+
+
+</style>
+	</head>
+	
+	
+	
 <body>
   <p id='server-time'></p>
 	
