--- a/index.html
+++ b/index.html
@@ -159,9 +159,9 @@ var player = Array([0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
 
 
 
-var objectDict = Array("casa1.png","arvore.png", "a.png", "b.png" );
-var tileDict = Array( "land11.png","tttt.png","swamp.png"  , "tt.png");
-var charDict = Array("p1.png" , "lu.png" , "blod2.png" , "mt222.png");
+var objectDict = Array(".../heroku/casa1.png",".../heroku/arvore.png", ".../heroku/a.png", ".../heroku/b.png" );
+var tileDict = Array( ".../heroku/land11.png",".../heroku/tttt.png",".../heroku/swamp.png"  , ".../heroku/tt.png");
+var charDict = Array(".../heroku/p1.png" , ".../heroku/lu.png" , ".../heroku/blod2.png" , ".../heroku/mt222.png");
 var charImg = new Array();
 var tileImg = new Array();
 var objectImg = new Array();
@@ -214,8 +214,7 @@ var mty3 = 35;
 
 ////var socket = io.connect('http://localhost:8000');
 
-      var socket = io();
-      var el = document.getElementById('server-time');
+
 
 
 
