--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 </style>
 </head>
-
+<p id='server-time'></p>
 <script type="text/javascript">
 
 //////var clickSound = new Audio("aBird1.wav");
