--- a/index.html
+++ b/index.html
@@ -504,8 +504,8 @@ if(monstro == morto)pontos +=5;
 		
 
 	}
-	if(newY !== ymouse  || newX !== xmouse){
-socket.emit('position', {playerX: playerX, playerY: playerY});
+///	if(newY !== ymouse  || newX !== xmouse){
+////socket.emit('position', {playerX: playerX, playerY: playerY});
 
 
 ///objectMap[xpos ][ypos] = 1;
