--- a/index.html
+++ b/index.html
@@ -201,7 +201,8 @@ var mty3 = 35;
 
 ////////var socket = io.connect('http://localhost:8000');
 
-
+      var socket = io();
+      var el = document.getElementById('server-time');
 
 
 
@@ -685,6 +686,9 @@ function init(){
 
 
 
+      socket.on('time', function(timeString) {
+        el.innerHTML = 'Server time: ' + timeString;
+      });
 
 
 
