--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@ var objectMap = Array([0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
 
 
 
-var objectDict = Array("casa1.png","arvore.png", "a.png", "b.png");
-var tileDict = Array( "land11.png","tttt.png","swamp.png"  , "tt.png");
+var objectDict = Array("casa1123.png","arvore123.png", "a.png", "b.png");
+var tileDict = Array( "land11234.png","tttt.png","swamp.png"  , "tt.png");
 var charDict = Array("p1.png" , "lu.png" , "blod2.png" , "mt222.png");
 var charImg = new Array();
 var tileImg = new Array();
