--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 
 <p>Image to use:</p>
-<img id="scream" src="img_the_scream.jpg" alt="The Scream" width="220" height="277">
+<img id="scream" src="https://www.w3schools.com/tags/img_the_scream.jpg" width="220" height="277">
 
 <p>Canvas:</p>
 <canvas id="myCanvas" width="300" height="150" style="border:1px solid #d3d3d3;">
