--- a/index2222.html
+++ b/index2222.html
@@ -149,9 +149,9 @@ var objectMap = Array([0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
 
 
 
-var objectDict = Array("casa1123.png","arvore123.png", "a.png", "b.png");
-var tileDict = Array( "land11234.png","tttt.png","swamp.png"  , "tt.png");
-var charDict = Array("p1.png" , "lu.png" , "blod2.png" , "mt222.png");
+var objectDict = Array("http://lostxat.xp3.biz/jogoo/Pasta/casa1.png","http://lostxat.xp3.biz/jogoo/Pasta/arvore.png", "http://lostxat.xp3.biz/jogoo/Pasta/a.png", "http://lostxat.xp3.biz/jogoo/Pasta/b.png");
+var tileDict = Array( "http://lostxat.xp3.biz/jogoo/Pasta/land11.png","http://lostxat.xp3.biz/jogoo/Pasta/tttt.png","http://lostxat.xp3.biz/jogoo/Pasta/swamp.png"  , "http://lostxat.xp3.biz/jogoo/Pasta/tt.png");
+var charDict = Array("http://lostxat.xp3.biz/jogoo/Pasta/p1.png" , "http://lostxat.xp3.biz/jogoo/Pasta/lu.png" , "http://lostxat.xp3.biz/jogoo/Pasta/blod2.png" , "http://lostxat.xp3.biz/jogoo/Pasta/mt222.png");
 var charImg = new Array();
 var tileImg = new Array();
 var objectImg = new Array();
