--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 	
 	 <p id='server-time'></p>
- 
+  <script src="http://lostxat.xp3.biz/jogoo/Pasta/jquery.min.js"></script>
  <script src="/socket.io/socket.io.js"></script>
 <script>
       var socket = io();
