--- a/index.html
+++ b/index.html
@@ -939,7 +939,7 @@ $(document).ready(function(){
 					console.log(data)
 
 
-					$("p#data_recieved").append("<br />\r\n [positions] {" + data.msgr + "}");
+					/////$("p#data_recieved").append("<br />\r\n [positions] {" + data.msgr + ": playerX = " + data.playerX + ", playerY = " + data.playerY + "}");
 					document.getElementById("vy").innerHTML = playerX;
 					document.getElementById("vx").innerHTML = playerY;
 
