--- a/index.html
+++ b/index.html
@@ -1011,7 +1011,8 @@ onload="initPage();"
       <p id="log"></p>
       <p id="data_recieved"></p>
 	
-	
+	<input id ="t"type="text"/>
+<input type="boton" value="mostrar" onclick ="mostrarmensagem()"/;>
  
       
       <p id='server-time'></p>
