--- a/index.html
+++ b/index.html
@@ -915,7 +915,7 @@ $(document).ready(function(){
          
           
 					// nós registramos este evento para se divertir: D
-					 $("p#log").html('got message: ' + data.msg + data.msgr + ': ' + data.playerX);
+					 $("p#log").html('got message: ' + data.msg + data.msgr );
 
 
 
