--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@ var mty2 = 5;
 var mtx3 = 10;
 var mty3 = 35;
 
-
+var name = '';
 ////////var socket = io.connect('http://localhost:8000');
 
 
@@ -928,9 +928,7 @@ $(document).ready(function(){
 
 
 
-         socket.on('time', function(timeString) {
-        el.innerHTML = 'Server time: ' + timeString;
-      });
+
 
 
 			
