--- a/index.html
+++ b/index.html
@@ -980,7 +980,22 @@ $(document).ready(function(){
 
 
 
-
+      $(function () {
+        var socket = io();
+        $('form').submit(function(){
+          socket.emit('chat message', $('#m').val());
+          $('#m').val('');
+          return false;
+        });
+        socket.on('chat message', function(msg){
+          $('#messages').append($('<li>').text(msg));
+		$('p#data_recieved').append($('<li>').text(msg));
+		
+		/////$("p#data_recieved").append("<br />\r\n" + data.message + ': ' + msg);
+		
+          window.scrollTo(0, document.body.scrollHeight);
+        });
+      });
 
 
 
