--- a/index.html
+++ b/index.html
@@ -1034,7 +1034,9 @@ onload="initPage();"
 	
    
       
-   
+       <form action="">
+      <input id="m" autocomplete="off" /><button>Send</button>
+</form>
    </body>
       
 </html>
