--- a/index.html
+++ b/index.html
@@ -988,7 +988,7 @@ $(document).ready(function(){
           return false;
         });
         socket.on('chat message', function(msg){
-          $('#messages').append($('<li>').text(msg));
+         ////// $('#messages').append($('<li>').text(msg));
 		$('p#data_recieved').append($('<li>').text(msg));
 		
 		/////$("p#data_recieved").append("<br />\r\n" + data.message + ': ' + msg);
