--- a/index.html
+++ b/index.html
@@ -1033,7 +1033,7 @@ onload="initPage();"
    <p id="data_recieved"></p>
        <ul id="messages"></ul>
        <form action="">
-      <input id="m" autocomplete="off" /><button>Send</button>
+      <input id="m" autocomplete="off" /><button>enviar/Send</button>
 </form>
    </body>
       
