--- a/index.html
+++ b/index.html
@@ -679,13 +679,14 @@ if(monstro == morto)pontos +=5;
 	{
 		playerX = newX;
 		playerY = newY;
+		movey = movey;
 		
 
 		
 
 	}
 	if(newY !== ymouse  || newX !== xmouse){
-socket.emit('position', {playerX: playerX, playerY: playerY});
+socket.emit('position', {playerX: playerX, playerY: playerY, playerz: movey});
 
 
 ///objectMap[xpos ][ypos] = 1;
@@ -939,7 +940,7 @@ $(document).ready(function(){
 					console.log(data)
 
                                        //// $("p#data_recieved").append("<br />\r\n" + data.msgr + ': ' +output);
-				       /////// $("p#data_recieved").append("<br />\r\n [positions] {" + data.msgr + ": playerX = " + data.playerX + ", playerY = " + data.playerY + "}");
+				       $("p#data_recieved").append("<br />\r\n [positions] {" + data.payerz + ": playerX = " + data.playerX + ", playerY = " + data.playerY + "}");
 					document.getElementById("vy").innerHTML = playerX;
 					document.getElementById("vx").innerHTML = playerY;
 
