--- a/index.html
+++ b/index.html
@@ -678,14 +678,14 @@ if(monstro == morto)pontos +=5;
 	{
 		playerX = newX;
 		playerY = newY;
-		///movey = 500;
+		movey = 500;
 		
 
 		
 
 	}
 	if(newY !== ymouse  || newX !== xmouse){
-socket.emit('position', {playerX: playerX, playerY: playerY, playerz: movey});
+socket.emit('position', {playerX: playerX, playerY: playerY, playerZ: movey});
 
 
 ///objectMap[xpos ][ypos] = 1;
@@ -947,7 +947,7 @@ $(document).ready(function(){
 					console.log(data)
 
                                        //// $("p#data_recieved").append("<br />\r\n" + data.payerz + ': ' +output);
-				     /////  $("p#data_recieved").append("<br />\r\n [positions] {" + data.payerz + ": playerX = " + data.playerX + ", playerY = " + data.playerY + "}");
+				       $("p#data_recieved").append("<br />\r\n [positions] {" + data.payerZ + ": playerX = " + data.playerX + ", playerY = " + data.playerY + "}");
 					document.getElementById("vy").innerHTML = playerX;
 					document.getElementById("vx").innerHTML = playerY;
 
