--- a/index.html
+++ b/index.html
@@ -947,7 +947,7 @@ $(document).ready(function(){
 					console.log(data)
 
                                        //// $("p#data_recieved").append("<br />\r\n" + data.payerz + ': ' +output);
-				       $("p#data_recieved").append("<br />\r\n [positions] {" + data.payerZ + ": playerX = " + data.playerX + ", playerY = " + data.playerY + "}");
+				       $("p#data_recieved").append("<br />\r\n [positions] {" + data.playerZ + ": playerX = " + data.playerX + ", playerY = " + data.playerY + "}");
 					document.getElementById("vy").innerHTML = playerX;
 					document.getElementById("vx").innerHTML = playerY;
 
