--- a/index.html
+++ b/index.html
@@ -1035,7 +1035,7 @@ $(document).ready(function(){
 
 <body onLoad="init();">
 <p id="nickname"></p>
-<canvas id="main" width="750" height="550" style="margin-top:10px; margin-left:10px;"></canvas
+<canvas id="main" width="750" height="550" style="margin-top:1%; margin-left:1%;"></canvas
 
 
 
