--- a/index.html
+++ b/index.html
@@ -945,7 +945,7 @@ $(document).ready(function(){
 					// nós registramos este evento para se divertir: D
 				    
 				      ///$("p#data_recieved").html('got message: ' + data.message);
-					 $("p#data_recieved").html('got message: ' + data.msg + data.message );
+					 $("p#messages").html('got message: ' + data.msg + data.message );
 
 
 
@@ -1047,7 +1047,7 @@ $(document).ready(function(){
 
 <body onLoad="init();">
 <p id="nickname"></p>
-<canvas id="main" width="350" height="550" style="margin-top:1%; margin-left:1%;"></canvas
+<canvas id="main" width="500" height="550" style="margin-top:1%; margin-left:1%;"></canvas
 
 	onload="initPage();"
 		onunload="exitPage();"
