--- a/index.html
+++ b/index.html
@@ -847,7 +847,11 @@ if (e.keyCode == 68) {
 //------------------------------------------------------------------------------
 
 
-
+      var socket = io();
+      var el = document.getElementById('server-time');
+      socket.on('time', function(timeString) {
+     /////   el.innerHTML = 'Server time: ' + timeString;
+      });
 
 
 //------------------------------------------------------
