--- a/index.html
+++ b/index.html
@@ -941,7 +941,7 @@ $(document).ready(function(){
 					// nós registramos este evento para se divertir: D
 				    
 				      ///$("p#data_recieved").html('got message: ' + data.message);
-					//// $("p#messages").html('got message: ' + data.msg + data.message );
+					 $("p#messages").html('got message: ' + data.msg + data.message );
 
 
 
