--- a/index.html
+++ b/index.html
@@ -1062,6 +1062,8 @@ $(document).ready(function(){
 	
 
 
+        <div id="l">dados-futuro >> <span id="lvl"></span></div>
+<div id="p">visitas-futuro >> <span id="pts"></span></div>
      
 	
 	        <div id="y">mesnsagens do server >> <span id="vy"></span></div>
