--- a/index.html
+++ b/index.html
@@ -677,8 +677,8 @@ delete player[playerr][playeryy];
 
 if(monstro == morto)pontos +=5;
   
-        document.getElementById("lvl").innerHTML = level;
-        document.getElementById("pts").innerHTML = pontos;
+       /// document.getElementById("lvl").innerHTML = level;
+        ///document.getElementById("pts").innerHTML = pontos;
 
 	if(map[newX] && map[newX][newY] !== 2 && map[newX] && map[newX][newY] !== undefined)
 	
@@ -1079,7 +1079,7 @@ $(document).ready(function(){
 	
 	
 	
- <p id='data_recieved'></p>
+
 	
 	
 	
