--- a/index.html
+++ b/index.html
@@ -501,10 +501,10 @@ function drawMap(){
 		  }
 
 
-   if(i == mtx && j == mty){
-ctx.drawImage(charImg[3],currentFrame1,movey1,100,150,xpos,ypos -(charImg[3].height/15) ,50,100);
+ ///  if(i == mtx && j == mty){
+////ctx.drawImage(charImg[3],currentFrame1,movey1,100,150,xpos,ypos -(charImg[3].height/15) ,50,100);
 							
-	}
+////	}
 
 		  
 					if(i == xmouse && j == ymouse){
