--- a/index.html
+++ b/index.html
@@ -338,9 +338,9 @@ var objectMap = Array([0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
 
 
 
-var objectDict = Array("http://lostxat.xp3.biz/jogoo/Pasta/casa1.png","http://lostxat.xp3.biz/jogoo/Pasta/arvore.png", "http://lostxat.xp3.biz/jogoo/Pasta/a.png", "http://lostxat.xp3.biz/jogoo/Pasta/b.png");
-var tileDict = Array( "http://lostxat.xp3.biz/jogoo/Pasta/land11.png","http://lostxat.xp3.biz/jogoo/Pasta/tttt.png","http://lostxat.xp3.biz/jogoo/Pasta/swamp.png"  , "http://lostxat.xp3.biz/jogoo/Pasta/tt.png");
-var charDict = Array("http://lostxat.xp3.biz/jogoo/Pasta/p1.png" , "http://lostxat.xp3.biz/jogoo/Pasta/lu.png" , "http://lostxat.xp3.biz/jogoo/Pasta/blod2.png" , "http://lostxat.xp3.biz/jogoo/Pasta/mt222.png");
+var objectDict = Array("https://lostxat.000webhostapp.com/Img/casa1.png","https://lostxat.000webhostapp.com/Img/arvore.png", "https://lostxat.000webhostapp.com/Img/a.png", "https://lostxat.000webhostapp.com/Img/b.png");
+var tileDict = Array( "https://lostxat.000webhostapp.com/Img/land11.png","https://lostxat.000webhostapp.com/Img/tttt.png","https://lostxat.000webhostapp.com/Img/swamp.png"  , "https://lostxat.000webhostapp.com/Img/tt.png");
+var charDict = Array("https://lostxat.000webhostapp.com/Img/p1.png" , "https://lostxat.000webhostapp.com/Img/lu.png" , "https://lostxat.000webhostapp.com/Img/blod2.png" , "https://lostxat.000webhostapp.com/Img/mt222.png");
 var charImg = new Array();
 var tileImg = new Array();
 var objectImg = new Array();
